[package]
name = "actix-discord-demo"
version = "0.1.0"
authors = ["Carter Himmel <carter@elhnet.net>"]
edition = "2018"

[dependencies]
actix = "0.9.0"
actix-files = "0.2.1"
actix-identity = "0.2.1"
actix-redis = "0.8.0"
actix-rt = "1"
actix-service = "1.0.5"
actix-web = "2"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.15"
env_logger = "0.7.0"
dotenv = "0.15.0"
envy = "0.4"
futures = "0.3.4"
jsonwebtoken = "7"
lazy_static = "1.4"
log = "0.4"
rand = "0.7"
redis-async = "0.6.1"
reqwest = { version = "0.10", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
url = "2"